<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">telaLogin</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Sing up</string>
    <string name="text_login">SIGN IN</string>
    <string name="text_hint_cpf">Cpf</string>
    <string name="text_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register now!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="e_mail_addres">E-mail address</string>
    <string name="sign_up">Sign up</string>
    <string name="show_films">Show films</string>
    <string name="send_e_mail">Send E-mail</string>
    <string name="registered_e_mail">Registered E-mail</string>
    <string name="e_mail_verification">E-mail Verification</string>
    <string name="wellcome">Wellcome</string>
    <string name="diamond_films">Diamond Films</string>
    <string name="sign_in">Sign in</string>
    <string name="gustavo_padilha">Gustavo Padilha</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="e_mail_adress">E-mail Adress</string>
    <string name="cpf">CPF</string>
</resources>